--- a/tools/src/main/resources/org/apache/spark/rapids/tool/ui/static/datasource-report-template.html
+++ b/tools/src/main/resources/org/apache/spark/rapids/tool/ui/static/datasource-report-template.html
@@ -1,10 +1,9 @@
 <!--
- Licensed to the Apache Software Foundation (ASF) under one or more
- contributor license agreements.  See the NOTICE file distributed with
- this work for additional information regarding copyright ownership.
- The ASF licenses this file to You under the Apache License, Version 2.0
- (the "License"); you may not use this file except in compliance with
- the License.  You may obtain a copy of the License at
+ Copyright (c) 2022, NVIDIA CORPORATION.
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
@@ -16,41 +15,43 @@
 -->
 
 <script id="datasource-report-template" type="text/html">
-    <table id="datasource-report-table" class="table table-striped compact">
-        <thead>
-        <tr>
-            <th>
+  <table id="datasource-report-table" class="table table-striped compact">
+    <thead>
+    <tr>
+      {{#showAppIndexColumn}}
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="Index of this application.">
           App Index
         </span>
-            </th>
-            <th>
+      </th>
+      {{/showAppIndexColumn}}
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="SQL ID.">
           SqlID
         </span>
-            </th>
-            <th>
+      </th>
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="Format of the Data Source">
           Format
         </span>
-            </th>
-            <th>
+      </th>
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="Path of the Data Source.">
           Location
         </span>
-            </th>
-            <th>
+      </th>
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="Filtered pushed to the level of the data source.">
           Pushed Filters
         </span>
-            </th>
-            <th>
+      </th>
+      <th>
         <span data-toggle="tooltip" data-placement="top" title="The duration time of this application.">
           Schema
         </span>
-            </th>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+      </th>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 </script>
