update JS to pull Recommendations from the QualTool
Signed-off-by: Ahmed Hussein (amahussein) <a@ahussein.me>

--- a/tools/src/main/resources/ui/assets/html/application.html
+++ b/tools/src/main/resources/ui/assets/html/application.html
@@ -331,7 +331,7 @@
 <!-- Dynamic code replacement using Mustache -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
 <script id="app-report-page-header-template" type="text/template">
-  <h1 class="dash-title">App Details: {{appName}} {{{badgeWrapper}}}</h1>
+  <h1 class="dash-title">App Details: {{qualInfo.appName}} {{{qualInfo.badgeWrapper}}}</h1>
 
   <div class="row">
     <div class="col-lg-2">
