address Matt's comments naming columns and colors
Signed-off-by: Ahmed Hussein (amahussein) <a@ahussein.me>

--- a/tools/src/main/resources/ui/assets/html/index.html
+++ b/tools/src/main/resources/ui/assets/html/index.html
@@ -127,6 +127,7 @@
       </div>
     </header>
     <main class="dash-content">
+      <h1 class="dash-title">Spark Qualification Tool</h1>
       <div id="qual-report-runtime-information"></div>
       <div class="container-fluid">
         <div id="qual-report-summary"></div>
