UI-changes: fix ui changes requested by Matt
Signed-off-by: Ahmed Hussein <a@ahussein.me>

--- a/tools/src/main/resources/ui/assets/html/index.html
+++ b/tools/src/main/resources/ui/assets/html/index.html
@@ -170,7 +170,7 @@
                         App Duration
                       </th>
                       <th>
-                        Opportunity
+                        GPU Opportunity
                       </th>
                       <th>
                         Recommendation
