UI-changes: build summary for the GPU Opportunities
Signed-off-by: Ahmed Hussein <a@ahussein.me>

--- a/tools/src/main/resources/ui/assets/html/index.html
+++ b/tools/src/main/resources/ui/assets/html/index.html
@@ -244,8 +244,8 @@
               <span class="stats-timeframe"> {{speedups.totalSqlDFDurationsLabel}} </span>
             </div>
             <div class="stats-change">
-              <span class="stats-percentage"> N/A </span>
-              <span class="stats-timeframe"> {{speedups.statsPercentage}} </span>
+              <span class="stats-percentage"> {{speedups.statsPercentage}} </span>
+              <span class="stats-timeframe"> {{speedups.statsTimeFrame}} </span>
             </div>
           </div>
         </div>
