UI-changes: adding all new fileds to raw report
Signed-off-by: Ahmed Hussein <a@ahussein.me>

--- a/tools/src/main/resources/ui/assets/html/raw.html
+++ b/tools/src/main/resources/ui/assets/html/raw.html
@@ -133,10 +133,16 @@
                       <th>Read Score Percent</th>
                       <th>Read File Format Score</th>
                       <th>Unsupported Read File Formats and Types</th>
-                      <th>Read File Format</th>
-                      <th>Read File Format</th>
                       <th>Write Data Format</th>
+                      <th>Complex Types</th>
                       <th>Nested Complex Types</th>
+                      <th>Estimated Duration</th>
+                      <th>Unsupported Duration</th>
+                      <th>Speedup Duration</th>
+                      <th>Speedup Factor</th>
+                      <th>Total Speedup</th>
+                      <th>Speedup Bucket</th>
+                      <th>Longest SqlDuration</th>
                     </tr>
                     </thead>
                   </table>
